:art::sparkles: Adding second section 'Qui sommes nous'

--- a/style/base/_base.scss
+++ b/style/base/_base.scss
@@ -85,3 +85,29 @@
     }
 
   }
+
+
+  .first-title {
+    margin-top: 159px;
+    margin-left: 148px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 52px;
+    color: #B2D234;
+  }
+
+  .first-subtitle {
+    margin-top: 40px;
+    margin-left: 148px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 300;
+    font-size: 18px;
+    color: #606060;
+  }
+
+  .produit1 {
+    margin-top: -580px;
+    margin-left: 938px;
+    width: 883px;
+    height: 883px;
+  }
