--- a/style/base/_base.scss
+++ b/style/base/_base.scss
@@ -111,3 +111,15 @@
     width: 883px;
     height: 883px;
   }
+
+  .info {
+    background-color: #B2D234;
+    color: #FFFFFF;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 24px;
+    padding: 14px 60px;
+    border-radius: 4px;
+    margin-top: 40px;
+    margin-left: 148px;
+  }
