--- a/style/style.css
+++ b/style/style.css
@@ -1,13 +1,14 @@
-@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+/* Head / Navbar */
 .head {
   background-image: url("../media/background.png");
   background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .nav-texts {
@@ -34,13 +35,16 @@
 }
 
 .commander {
-  background-color: #fff;
-  color: #B2D234;
+  color: rgb(178, 210, 52);
   font-family: "Poppins", sans-serif;
   font-weight: 600;
   font-size: 15px;
   padding: 9px 30px;
   border-radius: 4px;
+  outline: none;
+  background-color: #fff;
+  border-radius: 4px;
+  border: 1px solid transparent;
 }
 
 .tagline {
@@ -52,15 +56,23 @@
 }
 
 .socials-logo {
-  margin-top: 287px;
+  margin-top: 307px;
   margin-left: 1736px;
   width: 32px;
   height: 32px;
+  margin-bottom: 10px;
+}
+
+/* Second Section */
+.second-section {
+  background-image: url("../media/fond_grille.png");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .first-title {
-  margin-top: 159px;
   margin-left: 148px;
+  margin-top: 149px;
   font-family: "Poppins", sans-serif;
   font-weight: 600;
   font-size: 52px;
@@ -93,57 +105,76 @@
   border-radius: 4px;
   margin-top: 40px;
   margin-left: 148px;
+  border: 1px solid transparent;
 }
 
+/* Third Section */
 .third-class {
   background-image: url("../media/ismael-trevino-NDyuR4Huig8-unsplash.png");
   background-size: cover;
-  z-index: 1;
+  background-repeat: no-repeat;
+}
+
+.third-container {
+  width: 35vw;
+  height: 70vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(178, 210, 52, 0.8);
+  margin-left: 960px;
+  border: 1px solid;
 }
 
 .second-title {
-  margin-top: 121px;
-  margin-left: 1148px;
+  font-size: 39px;
+  font-weight: bolder;
+  color: #fff;
+  text-align: center;
+  margin-left: 32px;
+  margin-right: 32px;
   font-family: "Poppins", sans-serif;
-  font-weight: 600;
-  font-size: 52px;
-  color: #FFFFFF;
-  background-clip: padding-box; /* Limite le background à l'intérieur du padding */
 }
 
 .second-title2 {
-  margin-left: 1178px;
+  font-size: 39px;
+  font-weight: bolder;
+  color: #fff;
+  text-align: center;
+  margin-left: 32px;
+  margin-right: 32px;
   font-family: "Poppins", sans-serif;
-  font-weight: 600;
-  font-size: 52px;
-  color: #FFFFFF;
-  background-clip: padding-box; /* Limite le background à l'intérieur du padding */
 }
 
 .second-subtitle {
-  margin-top: 40px;
-  margin-left: 1161px;
+  font-size: 20.8px;
+  margin-left: 32px;
+  margin-right: 32px;
+  margin-top: 32px;
+  font-weight: bolder;
   font-family: "Poppins", sans-serif;
-  font-weight: 300;
-  font-size: 18px;
   color: #FFFFFF;
-  margin-left: 1178px;
 }
 
 .second-info {
+  font-size: 28px;
+  width: 200px;
+  height: 50px;
+  padding: 5px;
+  color: rgb(178, 210, 52);
   background-color: #fff;
-  color: #B2D234;
-  font-family: "Poppins", sans-serif;
-  font-weight: 600;
-  font-size: 15px;
-  padding: 9px 30px;
+  outline: none;
   border-radius: 4px;
+  border: 1px solid transparent;
+  margin-top: 40px;
 }
 
 .title-container {
   padding: 1px 1px;
 }
 
+/* Responsive */
 @media (max-width: 1300px) {
   .nav-texts {
     display: none;
@@ -176,14 +207,55 @@
     flex-direction: column;
     align-items: center;
   }
-  #third-page div {
-    border: 1px solid #2d2d2d;
+  .third-container {
+    width: 90%;
+    margin-top: 50px;
+    margin-left: 60px;
+    width: 80%;
+    height: 80%;
     display: flex;
-    background-color: rgba(178, 210, 52, 0.8);
-    margin-left: 20rem;
-    border: 1px solid blue;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
+  }
+  .second-title {
+    font-size: 32px;
+    margin-top: 50px;
+    margin-left: 60px;
+    width: 80%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+  .second-title2 {
+    font-size: 32px;
+    margin-top: 10px;
+    margin-left: 60px;
+    width: 80%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+  .second-subtitle {
+    font-size: 18px;
+    margin-top: 50px;
+    margin-left: 60px;
+    width: 80%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+  .second-info {
+    font-size: 24px;
+    margin-top: 30px;
+    margin-left: 30px;
+    margin-bottom: 30px;
+    width: 80%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
   }
 }/*# sourceMappingURL=style.css.map */
