--- a/style/base/_base.scss
+++ b/style/base/_base.scss
@@ -207,6 +207,26 @@
       align-items: center;
     }
 
+    .gauche {
+      margin-top: -120px;
+      font-size: auto;
+      margin-left: -100px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .produit1 {
+      margin-top: 50px;
+      margin-left: 60px;
+      margin-bottom: 50px;
+      width: 80%;
+      height: 80%;
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+    }
+
     .second-title,
     .second-title2,
     .second-subtitle,
