:art::sparkles: Finishing the responsive existing sections & setting up section four (left)

--- a/style/base/_base.scss
+++ b/style/base/_base.scss
@@ -180,6 +180,30 @@
     padding: 1px 1px;
 }
 
+
+.fourth-class {
+  margin-top: 78px;
+}
+
+.fourth-title {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+  font-size: 52px;
+  color: #B2D234;
+  margin-left: 694px;
+}
+
+.fourth-subtitle{
+  font-family: 'Poppins', sans-serif;
+  font-weight: 300;
+  font-size: 18px;
+  color: #606060;
+  text-align: center;
+  margin-left: 64px;
+  margin-top: 30px;
+}
+
+
     /* Responsive */
 
   @media (max-width: 1300px) {
