--- a/style/style.css
+++ b/style/style.css
@@ -196,6 +196,52 @@
   margin-top: 30px;
 }
 
+.list-menu {
+  width: 550px;
+  height: 700px;
+  margin-bottom: 100px;
+  margin-top: 87px;
+  margin-left: 159px;
+}
+
+.menu {
+  height: 100px;
+  margin-bottom: 40px;
+  position: relative;
+}
+
+.menu h1 {
+  color: #B2D234;
+  font-family: "Poppins", sans-serif;
+  font-size: 24px;
+  font-weight: 500;
+  margin-bottom: 12px;
+}
+
+.menu .price {
+  color: #B2D234;
+  font-family: "Poppins", sans-serif;
+  font-size: 24px;
+  font-weight: 500;
+  position: absolute;
+  top: 0;
+  right: 10px;
+}
+
+.menu .content {
+  color: #606060;
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  width: 75%;
+}
+
+.menu .best-offer {
+  border: 1px solid #B2D234;
+  padding: 12px;
+  height: 150px;
+}
+
 /* Responsive */
 @media (max-width: 1300px) {
   .nav-texts {
