--- a/style/style.css
+++ b/style/style.css
@@ -174,6 +174,7 @@
   padding: 1px 1px;
 }
 
+/* Fourth Section */
 .fourth-class {
   margin-top: 78px;
 }
@@ -201,7 +202,7 @@
   height: 700px;
   margin-bottom: 100px;
   margin-top: 87px;
-  margin-left: 159px;
+  margin-left: 359px;
 }
 
 .menu {
@@ -254,6 +255,51 @@
   border: 1px solid #B2D234;
   padding: 12px;
   height: 150px;
+}
+
+.blue {
+  color: #60A0D8;
+  font-family: "Poppins", sans-serif;
+  font-size: 64px;
+  font-weight: 300;
+  font-style: italic;
+  transform: rotate(-9deg);
+}
+
+.green {
+  color: #B2D234;
+  font-family: "Poppins", sans-serif;
+  font-size: 64px;
+  font-weight: 300;
+  font-style: italic;
+  transform: rotate(-9deg);
+}
+
+.fourth-droite {
+  width: 550px;
+  height: 700px;
+  margin-left: 969.67px;
+  margin-top: -690.16px;
+}
+
+.fourth-droite p {
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  text-align: center;
+  width: 800px;
+  align-items: center;
+  margin-top: 65px;
+  color: #606060;
+  width: 430px;
+}
+
+.fourth-droite button {
+  padding: 14px 60px;
+  margin-top: 90px;
+  background-color: #B2D234;
+  color: #FFFFFF;
+  border: 1px solid transparent;
 }
 
 /* Responsive */
