--- a/style/base/_base.scss
+++ b/style/base/_base.scss
@@ -312,6 +312,105 @@
   border: 1px solid transparent;
 }
 
+/* Five Section */
+
+.five-class {
+  background-image: url("../media/louis-hansel-MlPD-AzZYMg-unsplash.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+  object-fit: cover;
+  padding: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  text-align: start;
+  flex-wrap: wrap;
+}
+
+.green-card {
+  background-color: rgba(178, 210, 52, 0.884);
+  width: 45%;
+  height: 500px;
+  text-align: center;
+  align-items: center;
+  
+}
+
+.green-card h1 {
+  margin-top: 24px;
+  font-family: "Poppins", sans-serif;
+  font-size: 52px;
+  font-weight: 600;
+  color: white;
+}
+
+.green-content {
+  display: flex;
+  flex-direction: row;
+  margin-top: 40px;
+}
+
+.first-green-content p {
+  color: white;
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  text-align: center;
+  align-items: center;
+  margin-left: 248px;
+}
+
+.second-green-content p {
+  display: flex;
+  flex-direction: column;
+  color: white;
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  text-align: center;
+  align-items: center;
+  margin-left: 48px;
+}
+
+.blue-card {
+  background-color: rgba(96, 160, 216, 0.884);
+  width: 45%;
+  height: 500px;
+  text-align: center;
+  align-items: center;
+}
+
+.blue-card h1 {
+  margin-top: 24px;
+  font-family: "Poppins", sans-serif;
+  font-size: 52px;
+  font-weight: 600;
+  color: white;
+}
+
+.blue-card p {
+  color: white;
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  text-align: center;
+  align-items: center;
+}
+
+.first-blue-content {
+  display: flex;
+  flex-direction: column;
+  margin-left: 248px;
+}
+
+.blue-content {
+  display: flex;
+  flex-direction: row;
+  margin-top: 40px;
+}
+
 
     /* Responsive */
 
