:art::sparkles: Finish Fourth Section Responsive

--- a/style/base/_base.scss
+++ b/style/base/_base.scss
@@ -816,7 +816,52 @@ ul {
       margin-top: 50px;
     }
 
+    .five-class {
+      height: 175vh;
+      gap: 30px;
+    }
+
+    .green-content {
+      width: 80%;
+      height: 600px;
+    }
+
+    .blue-content {
+      width: 80%;
+    height: 600px;
+    }
+
+    .first-green-content p {
+      margin-left: 40px;
+
+    }
+
+    .first-blue-content p {
+      margin-left: -200px;
+    }
+
 
 
   
+  }
+
+  @media only screen and (max-width: 600px) {
+    .green-card,
+    .blue-card {
+      width: 100%;
+    }
+  }
+
+  /* Affichage en deux colonnes sur les écrans plus larges */
+  @media only screen and (min-width: 601px) {
+    .five-class {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
+
+    .green-card,
+    .blue-card {
+      width: calc(50% - 20px);
+    }
   }
